zokrates_cli/examples/compile_errors/two_entry_points.zok
def main():
    return

def main(field a):
    return